src/objects/Line_Item__c.object
<CustomObject>
    <description>Line Item for shipping orders</description>
    <fields>
        <fullName>CMH_ID__c</fullName>
        <formula>Shipping_Order__r.Account__r.CMHID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMH ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Prep_Deadline__c</fullName>
        <formula>Shipping_Order__r.Equipment_Prep_Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Prep Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fullfilled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fullfilled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <formula>Shipping_Order__r.Network__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Line Items</relationshipLabel>
        <relationshipName>Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Order_Notes__c</fullName>
        <formula>Shipping_Order__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Order Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Order__c</fullName>
        <label>Shipping Order</label>
        <referenceTo>Shipping_Order__c</referenceTo>
        <relationshipLabel>Product Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <formula>Shipping_Order__r.Time_Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yet_to_Fullfill__c</fullName>
        <formula>Quantity__c - Fullfilled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yet to Fullfill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ProductLI_Validation_on_Yet_to_fullfilll</fullName>
        <active>true</active>
        <errorConditionFormula>Yet_to_Fullfill__c &lt; 0</errorConditionFormula>
        <errorMessage>Fullfilled cannot be greater than Quantity</errorMessage>
    </validationRules>
</CustomObject>